# bifrost-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  RELEASES.md  SECURITY.md  TESTING.md
.github/workflows/: ci.yml
.planner/: README.md  backlog.md  context.md  decisions.md  handoff.md  notes.md  review.md  risks.md  runbook.md
.planner/templates/: audit.md  plan.md  report.md
contrib/example/: Cargo.toml  README.md
contrib/example/src/: main.rs
crates/bifrost-app/: Cargo.toml
crates/bifrost-app/src/: host.rs  lib.rs  main.rs  native_runtime.rs  onboarding.rs  runtime.rs
crates/bifrost-app/src/host/: client.rs  daemon.rs  handlers.rs  logging.rs  protocol.rs  types.rs
crates/bifrost-app/src/host/handlers/: admin.rs  network_ops.rs  runtime_reads.rs
crates/bifrost-app/src/runtime/: bootstrap.rs  config.rs  health.rs  paths.rs  store.rs
crates/bifrost-app/tests/: config_options.rs  daemon_control_errors.rs  daemon_lifecycle.rs  onboarding_runtime.rs  run_marker_v2.rs  runtime_state.rs  state_store_limits.rs
crates/bifrost-bridge/: Cargo.toml
crates/bifrost-bridge-core/: Cargo.toml
crates/bifrost-bridge-core/src/: lib.rs
crates/bifrost-bridge-tokio/: Cargo.toml
crates/bifrost-bridge-tokio/src/: lib.rs
crates/bifrost-bridge-tokio/tests/: bridge_admin_and_phases.rs  bridge_dedupe_and_failures.rs  bridge_flow.rs  bridge_queues.rs  bridge_recovery.rs
crates/bifrost-bridge-wasm/: Cargo.toml
crates/bifrost-bridge-wasm/src/: lib.rs
crates/bifrost-bridge/src/: lib.rs
crates/bifrost-bridge/tests/: bridge_dedupe_and_failures.rs  bridge_flow.rs  bridge_queues.rs
crates/bifrost-cli/: Cargo.toml  README.md
crates/bifrost-cli/src/: main.rs
crates/bifrost-cli/tests/: e2e_cli.rs
crates/bifrost-codec/: Cargo.toml  README.md
crates/bifrost-codec/src/: bridge.rs  error.rs  hexbytes.rs  lib.rs  package.rs  parse.rs  rpc.rs  wire.rs
crates/bifrost-core/: Cargo.toml  README.md
crates/bifrost-core/src/: ecdh.rs  error.rs  group.rs  lib.rs  nonce.rs  session.rs  sighash.rs  sign.rs  types.rs  validate.rs
crates/bifrost-dev/: Cargo.toml
crates/bifrost-devnet/: Cargo.toml  README.md
crates/bifrost-devnet/src/: main.rs
crates/bifrost-devtools/: Cargo.toml  README.md
crates/bifrost-devtools/src/: e2e.rs  keygen.rs  main.rs  relay.rs
crates/bifrost-node/: Cargo.toml  README.md
crates/bifrost-node/src/: client.rs  error.rs  lib.rs  node.rs  types.rs
crates/bifrost-node/tests/: adversarial.rs  fault_injection.rs  happy_paths.rs
crates/bifrost-profile/: Cargo.toml
crates/bifrost-profile-wasm/: Cargo.toml
crates/bifrost-profile-wasm/src/: lib.rs
crates/bifrost-profile/src/: config.rs  lib.rs  models.rs  native.rs  packages.rs  paths.rs  policy.rs  traits.rs
crates/bifrost-profile/src/flows/: backup.rs  common.rs  encrypted_profile.rs  export.rs  imports.rs  mod.rs  recovery.rs  rotation.rs  types.rs
crates/bifrost-relay-dev/: Cargo.toml  README.md
crates/bifrost-router/: Cargo.toml
crates/bifrost-router/src/: lib.rs
crates/bifrost-rpc/: Cargo.toml  README.md
crates/bifrost-rpc/src/: lib.rs  (+3 more)
crates/bifrost-signer/: Cargo.toml
crates/bifrost-signer/src/: crypto.rs  error.rs  event_io.rs  lib.rs  util.rs
crates/bifrost-signer/tests/: runtime_roundtrip.rs
crates/bifrost-transport/: Cargo.toml  README.md
crates/bifrost-transport-ws/: Cargo.toml  README.md
crates/bifrost-transport-ws/src/: lib.rs  ws_transport.rs
crates/bifrost-transport-ws/tests/: nip44_vectors.json
crates/bifrost-transport/src/: error.rs  lib.rs  traits.rs  types.rs
crates/bifrost-tui/: Cargo.toml  README.md
crates/bifrost-tui/src/: main.rs
crates/bifrostd/: Cargo.toml  README.md
crates/bifrostd/src/: main.rs
crates/frostr-utils/: Cargo.toml  README.md
crates/frostr-utils/src/: errors.rs  keyset.rs  lib.rs  onboarding.rs  profile_packages.rs  protocol.rs  recovery.rs  types.rs  verify.rs
design/plans/: architecture-quality-remediation-2026-03-02.md  plan-a-pubkey32-normalization-hard-cut-2026-03-05.md  plan-b-multi-device-router-single-p-tag-hard-cut-2026-03-05.md  plan-c-architecture-hardening-2026-03-06.md  separate-signing-device-subscription-service-2026-03-02.md
design/v1/: ARCHITECTURE.md  implicit-behaviors.md  libraries.md  planes.md  wiring.md
dev/artifacts/: README.md  current-status.md  gap-report-ts-vs-rs.md  migration-execution.md  migration-guide-ts-to-rs.md  release-checklist-v0.1.0.md  runtime-stack.md  session-handoff.md
dev/audit/: AUDIT.md  RUNBOOK.md  checklist-v0.1.0.md  internal-audit-2026-02-27.md
dev/data/: .gitignore  README.md
dev/demo-2of2/: bifrost-alice.json  bifrost-bob.json  group.json  onboard-bob.txt  share-alice.json  share-bob.json  state-alice.json  state-bob.json
dev/planner/: 01-scope-and-goals.md  02-parity-matrix.md  03-milestones.md  04-backlog.md  05-interfaces.md  06-test-strategy.md  07-risks-and-decisions.md  09-batch-sign-nonce-model.md  README.md  RUNBOOK.md
dev/reports/: code-quality-technical-debt-audit-2026-03-03.md  full-codebase-audit-2026-03-03.md
dev/scripts/: audit_run.sh  planner_runbook.sh  ws_soak.sh
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CRYPTOGRAPHY.md  GLOSSARY.md  GUIDE.md  INDEX.md  OPERATIONS.md  PROTOCOL.md  README.md  SECURITY-MODEL.md  TROUBLESHOOTING.md  current-status.md  development-playbook.md  migration-execution.md  project-overview.md  session-handoff.md
docs/frostr-utils/: INDEX.md  browser-wasm.md  keyset.md  onboarding.md  profile-packages.md  security.md
example/: README.md
example/frost_bip340_example/: Cargo.toml  README.md
example/nostr_ws_example/: Cargo.toml  README.md
planner/: 02-parity-matrix.md  03-milestones.md  04-backlog.md  05-interfaces.md  06-test-strategy.md  07-risks-and-decisions.md  08-status-template.md  README.md
plans/: dependency-remediation.md
scripts/: check-profile-feature-boundaries.sh  coverage-targets.env  devnet-cluster.sh  devnet-tmux.sh  devnet.sh  evaluate-coverage-targets.sh  test-node-e2e.sh  test-tui-e2e.sh  toolchain_preflight.sh
(+21 files in other folders)
