[workspace]
members = [
  "crates/frostr-utils",
  "crates/bifrost-core",
  "crates/bifrost-codec",
  "crates/bifrost-signer",
  "crates/bifrost-router",
  "crates/bifrost-bridge-tokio",
  "crates/bifrost-bridge-wasm",
  "crates/bifrost-app",
  "crates/bifrost-devtools",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = ["Christopher Scott"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"
fs2 = "0.4"
base64 = "0.22"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }
k256 = { version = "0.13", features = ["arithmetic", "ecdh"] }
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "sync", "time", "net"] }
nostr = { version = "0.44", features = ["std", "nip44"] }
nostr-sdk = { version = "0.44" }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
frost-secp256k1-tr-unofficial = "2.2.0"
