[package]
name = "bifrost-bridge-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing.workspace = true
bifrost-core = { path = "../bifrost-core" }
bifrost-router = { path = "../bifrost-router" }
bifrost-signer = { path = "../bifrost-signer" }
frostr-utils = { path = "../frostr-utils" }

[dev-dependencies]
bifrost-codec = { path = "../bifrost-codec" }
frostr-utils = { path = "../frostr-utils" }
hex.workspace = true
