[package]
name = "bifrost-bridge-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
bifrost-router = { path = "../bifrost-router" }
bifrost-codec = { path = "../bifrost-codec" }
bifrost-core = { path = "../bifrost-core" }
bifrost-signer = { path = "../bifrost-signer" }
frostr-utils = { path = "../frostr-utils" }
hex.workspace = true
k256.workspace = true
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
