[package]
name = "bifrost-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
hex.workspace = true
sha2.workspace = true
hmac.workspace = true
rand_core.workspace = true
zeroize.workspace = true
k256.workspace = true
serde.workspace = true
frost-secp256k1-tr-unofficial.workspace = true

[dev-dependencies]
serde_json.workspace = true
