[package]
name = "bifrost-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "bifrost-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "bifrost-devtools"
path = "src/bin/devtools.rs"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
hex.workspace = true
k256 = { workspace = true, features = ["schnorr"] }
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
bifrost-app = { path = "../bifrost-app" }
bifrost-bridge-tokio = { path = "../bifrost-bridge-tokio" }
bifrost-core = { path = "../bifrost-core" }
bifrost-codec = { path = "../bifrost-codec" }
bifrost-signer = { path = "../bifrost-signer" }
frostr-utils = { path = "../frostr-utils" }
crossterm = "0.29"
ratatui = "0.30"
