[package]
name = "bifrost-devnet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
rand_core.workspace = true
frost-secp256k1-tr-unofficial.workspace = true
bifrost-core = { path = "../bifrost-core" }
bifrost-codec = { path = "../bifrost-codec" }
