[package]
name = "bifrost-devtools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
k256 = { workspace = true, features = ["schnorr"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
bifrost-core = { path = "../bifrost-core" }
bifrost-codec = { path = "../bifrost-codec" }
frostr-utils = { path = "../frostr-utils" }

[dev-dependencies]
rand_core.workspace = true
