[package]
name = "bifrost-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
k256.workspace = true
futures.workspace = true
bifrost-core = { path = "../bifrost-core" }
bifrost-codec = { path = "../bifrost-codec" }
bifrost-transport = { path = "../bifrost-transport" }

[dev-dependencies]
frost-secp256k1-tr-unofficial.workspace = true
rand_core.workspace = true
