[package]
name = "bifrost-profile-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bifrost-codec = { path = "../bifrost-codec" }
bifrost-profile = { path = "../bifrost-profile", default-features = false }
frostr-utils = { path = "../frostr-utils" }
hex.workspace = true
nostr.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
