[package]
name = "bifrost-transport-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
bifrost-transport = { path = "../bifrost-transport" }
bifrost-codec = { path = "../bifrost-codec" }
