[package]
name = "bifrost-transport-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
futures-util.workspace = true
hex.workspace = true
k256.workspace = true
base64 = "0.22"
chacha20 = "0.9"
hmac.workspace = true
rand_core.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
bifrost-transport = { path = "../bifrost-transport" }
bifrost-codec = { path = "../bifrost-codec" }

[dev-dependencies]
futures.workspace = true
