[package]
name = "bifrost-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
bifrost-codec = { path = "../bifrost-codec" }
