[package]
name = "bifrost-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "time"] }
bifrost-core = { path = "../bifrost-core" }
bifrost-rpc = { path = "../bifrost-rpc" }
ratatui = "0.30"
crossterm = "0.29"
