[package]
name = "frostr-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand_core.workspace = true
frost-secp256k1-tr-unofficial.workspace = true
bech32 = "0.11"
zeroize.workspace = true
hex.workspace = true
bifrost-core = { path = "../bifrost-core" }

[dev-dependencies]
rand = "0.8"
