[package]
name = "frostr-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand_core.workspace = true
base64.workspace = true
chacha20.workspace = true
hmac.workspace = true
nostr.workspace = true
sha2.workspace = true
frost-secp256k1-tr-unofficial.workspace = true
bech32 = "0.11"
chacha20poly1305.workspace = true
argon2 = "0.5"
zeroize.workspace = true
hex.workspace = true
aes-gcm = "0.10"
pbkdf2 = "0.12"
url = "2"
bifrost-core = { path = "../bifrost-core" }
bifrost-codec = { path = "../bifrost-codec" }
k256.workspace = true

[dev-dependencies]
rand = "0.8"
